--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>сайт Антона</title>
+    <title>Формала-1</title>
 </head>
-<body>
 
-</body>
+<body>
+    
+</body> 
 </html>
