--- a/index.html
+++ b/index.html
@@ -7,6 +7,135 @@
 </head>
 
 <body>
-    
+    <header class="header">
+        <img class="header__logo" src="images/F1.svg" alt="">
+        <nav class="header__title">
+            <ul class="header__nav-list">
+                <li class="header__nav-item"><a href="">РУ</a></li>
+                <li class="header__nav-item"><a href="">EN</a></li>
+            </ul>
+        </nav>
+        <div>
+            <a href=""></a>
+            <a href=""></a>
+        </div>
+        <a href=""></a>
+    </header>
+    <main class="main">
+        <section>
+            <div><img src="" alt=""></div>
+            <div><img src="" alt=""></div>
+            <div><img src="" alt=""></div>
+            <div><img src="" alt=""></div>
+            <div><img src="" alt=""></div>
+        </section>
+        <section class="main__title">
+            <a href=""></a>
+            <img src="" alt="">
+        </section>
+        <section>
+            <a href="">
+                Про сайт
+            </a>
+        </section>
+        <section>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt=""></a>
+        </section>
+        <section>
+            <a href="">Записи прошлых гонок</a>
+            <ul>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </section>
+        <section class="main__news">
+            <a href=""></a>
+            <div>
+                <div>
+                    <img src="" alt="">
+                    <a href=""></a>
+                    <p></p>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <a href=""></a>
+                    <p></p>
+                </div>
+                <div>
+                    <a href=""></a>
+                    <p></p>
+                </div>
+                <div>
+                    <a href=""></a>
+                    <p></p>
+                </div>
+                <div>
+                    <a href=""></a>
+                    <p></p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <section>
+            <a href=""><img src="" alt=""></a>
+            <a href=""></a>
+        </section>
+        <section>
+            <div>
+                <p>Телефон и почта</p>
+                <ul>
+                    <li><a href="">+12345678987</a></li>
+                </ul>
+            </div>
+            <div>
+                <p>Адреса</p>
+                <ul>
+                    <li><p>Малая Пионерская</p></li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <div>
+                <p>Юр. Информация</p>
+                <ul>
+                    <li><a href="">Публичеая оферта</a></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div>
+                <p>Рекламодателям</p>
+                <ul>
+                    <li><a href="">Договор о erid</a></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div>
+                <p>Организаторам</p>
+                <ul>
+                    <li><a href="">Правила безопасности</a></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            <div>
+                <p>Покупателям</p>
+                <ul>
+                    <li><a href="">Льготы</a></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+        </section>
+    </footer>
 </body> 
 </html>
